force-app/main/default/objects/dropzone__Configuration__c/fields/dropzone__Attachment__c.field-meta.xml
<CustomField>
    <fullName>dropzone__Attachment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Attachment</label>
    <type>Checkbox</type>
</CustomField>