force-app/main/default/objects/dropzone__Configuration__c/fields/dropzone__Community_Url__c.field-meta.xml
<CustomField>
    <fullName>dropzone__Community_Url__c</fullName>
    <label>Community Url</label>
    <type>Url</type>
</CustomField>