force-app/main/default/objects/dropzone__Configuration__c/fields/dropzone__Content__c.field-meta.xml
<CustomField>
    <fullName>dropzone__Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content</label>
    <type>Checkbox</type>
</CustomField>